Fix flyout buttons in high contrast

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -142,6 +142,10 @@
         }
     }
 
+    .blocklyFlyoutButtonBackground {
+        stroke: @HCtextColor !important;
+    }
+
     /* Main editor areas */
 
     #root {
